# doczot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  rating_sample_25.json  requirements.txt  test_api.py
docs/: BACKLOG.md  DATASET_LICENSES.md  LEARNINGS.md  SELF_HOSTING.md
docs/features/: documentation-parsing.md  endpoint-detection.md
doczot_analyzer/: docs_parser.py  models.py  scanner.py
doczot_analyzer/tests/: test_docs_parser.py  test_scanner.py
