[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doczot-analyzer"
version = "0.1.0"
description = "LLM-powered documentation coverage analysis for FastAPI projects"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["doczot_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["doczot_analyzer/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=doczot_analyzer --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
