[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doczot-analyzer"
version = "0.1.0"
description = "Open source documentation coverage analysis for FastAPI projects - like Codecov for API docs"
readme = "README.md"
authors = [{name = "Sharon", email = "sharon@doczot.com"}]
license = {text = "Apache-2.0"}
keywords = ["documentation", "coverage", "fastapi", "api", "docs", "testing", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Framework :: FastAPI",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "markdown-it-py>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/doczot"
Documentation = "https://docs.doczot.com"
Repository = "https://github.com/yourusername/doczot"
"Bug Tracker" = "https://github.com/yourusername/doczot/issues"
Changelog = "https://github.com/yourusername/doczot/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["doczot_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["doczot_analyzer/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=doczot_analyzer --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
